Showing different errors for login
logout button fixed in table view controller

locations array stored just in its class

alert to inform the user that the location could be posted

--- a/baumap/baumap/Base.lproj/Main.storyboard
+++ b/baumap/baumap/Base.lproj/Main.storyboard
@@ -118,7 +118,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Logout"/>
                                                 <connections>
-                                                    <action selector="actionLogout:" destination="5UI-sW-aA9" eventType="touchUpInside" id="oyy-KM-klV"/>
+                                                    <action selector="actionLogout:" destination="ged-78-ati" eventType="touchUpInside" id="G0H-Ml-P1Q"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
